1. Метод .of [#411728]