@@ -12,13 +12,13 @@ public class SearchAttTest {
 
     @Test
     public void whenFilterSize() {
-        List<Attachment> attachments = Arrays.asList(
+        List<Attachment> attachments = List.of(
                 new Attachment("image 1", 150),
                 new Attachment("bug", 100),
                 new Attachment("image 2", 34),
                 new Attachment("bug", 13)
         );
-        List<Attachment> expected = Arrays.asList(
+        List<Attachment> expected = List.of(
                 new Attachment("image 1", 150)
         );
         List<Attachment> output = SearchAtt.filterSize(attachments);
@@ -27,13 +27,13 @@ public class SearchAttTest {
 
     @Test
     public void whenFilterName() {
-        List<Attachment> attachments = Arrays.asList(
+        List<Attachment> attachments = List.of(
                 new Attachment("image 1", 150),
                 new Attachment("bug", 100),
                 new Attachment("image 2", 34),
                 new Attachment("bugs", 13)
         );
-        List<Attachment> expected = Arrays.asList(
+        List<Attachment> expected = List.of(
                 new Attachment("bug", 100),
                 new Attachment("bugs", 13)
         );
